--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -1,11 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2xI-yr-O5N">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Zc9-rb-Blw">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Businesses View Controller-->
+        <!--Yelp-->
         <scene sceneID="5L9-Uz-lNK">
             <objects>
                 <viewController id="2xI-yr-O5N" customClass="BusinessesViewController" customModule="Yelp" customModuleProvider="target" sceneMemberID="viewController">
@@ -14,14 +18,142 @@
                         <viewControllerLayoutGuide type="bottom" id="VBY-gq-v8E"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="XhR-oz-92f">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MBD-UW-uAg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BusinessCell" rowHeight="130" id="d7s-PG-mWL" customClass="BusinessCell" customModule="Yelp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="130"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d7s-PG-mWL" id="5wS-Si-xyW">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="129.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bHW-IW-1c8">
+                                                    <rect key="frame" x="8" y="8" width="100" height="113.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="hnc-1a-KrL"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="zsC-MK-SPd"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKp-Lg-gcf">
+                                                    <rect key="frame" x="116" y="33" width="123" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="l8Z-tm-XHg"/>
+                                                        <constraint firstAttribute="width" constant="123" id="tmn-Wb-rFB"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="1. grand palace" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06L-xw-Nvl">
+                                                    <rect key="frame" x="116" y="8" width="124" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" ambiguous="YES" text="0.07mi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqc-Aw-wrf">
+                                                    <rect key="frame" x="325" y="10" width="41" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.46551165803108807" green="0.46551165803108807" blue="0.46551165803108807" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="address" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="61K-1K-tWY">
+                                                    <rect key="frame" x="116" y="57" width="229" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="review" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EwH-Ra-wAK">
+                                                    <rect key="frame" x="243" y="34.5" width="40" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.46551165803108807" green="0.46551165803108807" blue="0.46551165803108807" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A7G-GV-hLW">
+                                                    <rect key="frame" x="349" y="37" width="17" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.46551165803108807" green="0.46551165803108807" blue="0.46551165803108807" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="type of food" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E37-ze-gsu">
+                                                    <rect key="frame" x="116" y="77" width="74" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" red="0.46551165803108807" green="0.46551165803108807" blue="0.46551165803108807" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="xqc-Aw-wrf" secondAttribute="trailing" constant="8" id="0bm-9K-uYs"/>
+                                                <constraint firstItem="06L-xw-Nvl" firstAttribute="top" secondItem="5wS-Si-xyW" secondAttribute="top" constant="8" id="3BK-85-FMd"/>
+                                                <constraint firstItem="bHW-IW-1c8" firstAttribute="leading" secondItem="5wS-Si-xyW" secondAttribute="leading" constant="8" id="3My-pX-3ij"/>
+                                                <constraint firstItem="EwH-Ra-wAK" firstAttribute="leading" secondItem="fKp-Lg-gcf" secondAttribute="trailing" constant="4" id="8Kf-Aj-fMe"/>
+                                                <constraint firstItem="fKp-Lg-gcf" firstAttribute="leading" secondItem="bHW-IW-1c8" secondAttribute="trailing" constant="8" id="94g-Gt-X2D"/>
+                                                <constraint firstItem="fKp-Lg-gcf" firstAttribute="top" secondItem="06L-xw-Nvl" secondAttribute="bottom" constant="4" id="CYq-4I-Jzv"/>
+                                                <constraint firstItem="E37-ze-gsu" firstAttribute="top" secondItem="61K-1K-tWY" secondAttribute="bottom" constant="4" id="GcJ-nb-5v7"/>
+                                                <constraint firstItem="EwH-Ra-wAK" firstAttribute="centerY" secondItem="fKp-Lg-gcf" secondAttribute="centerY" id="Kjv-VA-s1t"/>
+                                                <constraint firstAttribute="trailing" secondItem="A7G-GV-hLW" secondAttribute="trailing" constant="8" id="KlL-VW-d5N"/>
+                                                <constraint firstAttribute="trailing" secondItem="61K-1K-tWY" secondAttribute="trailing" constant="30" id="Ldz-bZ-I5l"/>
+                                                <constraint firstItem="xqc-Aw-wrf" firstAttribute="leading" secondItem="06L-xw-Nvl" secondAttribute="trailing" constant="8" id="Nx0-p8-EAk"/>
+                                                <constraint firstItem="06L-xw-Nvl" firstAttribute="leading" secondItem="bHW-IW-1c8" secondAttribute="trailing" constant="8" id="OX7-S7-Nne"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="E37-ze-gsu" secondAttribute="bottom" constant="10" id="RHd-fT-20I"/>
+                                                <constraint firstItem="61K-1K-tWY" firstAttribute="leading" secondItem="bHW-IW-1c8" secondAttribute="trailing" constant="8" id="Wfh-1O-8AW"/>
+                                                <constraint firstItem="bHW-IW-1c8" firstAttribute="top" secondItem="5wS-Si-xyW" secondAttribute="top" constant="8" id="gyR-0F-9dr"/>
+                                                <constraint firstItem="xqc-Aw-wrf" firstAttribute="top" secondItem="5wS-Si-xyW" secondAttribute="top" constant="10" id="pzZ-zT-sF3"/>
+                                                <constraint firstItem="E37-ze-gsu" firstAttribute="leading" secondItem="bHW-IW-1c8" secondAttribute="trailing" constant="8" id="qoR-bn-NHa"/>
+                                                <constraint firstItem="A7G-GV-hLW" firstAttribute="centerY" secondItem="EwH-Ra-wAK" secondAttribute="centerY" id="t4p-Na-4Z2"/>
+                                                <constraint firstAttribute="bottom" secondItem="bHW-IW-1c8" secondAttribute="bottom" constant="8" id="tm7-3X-0if"/>
+                                                <constraint firstItem="61K-1K-tWY" firstAttribute="top" secondItem="fKp-Lg-gcf" secondAttribute="bottom" constant="4" id="vxA-wV-lcH"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="addressLabel" destination="61K-1K-tWY" id="2xO-6N-Wk2"/>
+                                            <outlet property="distenceLabel" destination="xqc-Aw-wrf" id="bdR-hE-f8O"/>
+                                            <outlet property="nameLabel" destination="06L-xw-Nvl" id="pYU-WQ-frx"/>
+                                            <outlet property="priceLabel" destination="A7G-GV-hLW" id="vnU-oS-hUd"/>
+                                            <outlet property="ratingImageView" destination="fKp-Lg-gcf" id="vOf-jc-zQe"/>
+                                            <outlet property="reviewLabel" destination="EwH-Ra-wAK" id="JmZ-us-yq5"/>
+                                            <outlet property="thumbImageView" destination="bHW-IW-1c8" id="jM8-M5-wuJ"/>
+                                            <outlet property="typeLabel" destination="E37-ze-gsu" id="n1d-n6-Umd"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="VBY-gq-v8E" firstAttribute="top" secondItem="MBD-UW-uAg" secondAttribute="bottom" id="6oM-KK-1Pg"/>
+                            <constraint firstItem="MBD-UW-uAg" firstAttribute="top" secondItem="XhR-oz-92f" secondAttribute="top" id="Ili-mF-5gP"/>
+                            <constraint firstAttribute="trailing" secondItem="MBD-UW-uAg" secondAttribute="trailing" id="TtD-Mi-g0C"/>
+                            <constraint firstItem="MBD-UW-uAg" firstAttribute="leading" secondItem="XhR-oz-92f" secondAttribute="leading" id="urf-b7-rHw"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Yelp" id="omI-JF-6lJ"/>
+                    <connections>
+                        <outlet property="businessTableView" destination="MBD-UW-uAg" id="ufr-DO-L7c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fgb-4b-F1b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1788" y="358"/>
+            <point key="canvasLocation" x="2127.1999999999998" y="357.57121439280365"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="QAC-hz-QfU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zc9-rb-Blw" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qHl-3D-aJI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2xI-yr-O5N" kind="relationship" relationship="rootViewController" id="dgm-SJ-igA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZSR-mB-fy4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1420" y="358"/>
         </scene>
     </scenes>
 </document>
